--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -46,6 +46,12 @@
             <version>3.0.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>3.1.4</version>
+        </dependency>
+
     </dependencies>
 
     <build>
