Connect to the DB

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,19 @@
 server.port=8080
 frontend_address=http://localhost:3500
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
+
+# H2 DataSource configuration (used in development)
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+
+# PostgreSQL DataSource configuration
+spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username= postgres
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto= update
+
+# Disable H2 console?
+# spring.h2.console.enabled=false
