--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -48,9 +48,9 @@
         </dependency>
 
         <dependency>
-            <groupId>postgresql</groupId>
+            <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <version>9.1-901-1.jdbc4</version>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
