--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,13 @@
 server.port=8080
 frontend_address=http://localhost:3500
+
+spring.datasource.url= jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username= postgres
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+spring.jpa.hibernate.ddl-auto= update
+
+spring.jpa.defer-datasource-initialization=true
+spring.sql.init.mode=always
